--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -15,7 +15,7 @@
   user-select: none;
   border: $input-btn-border-width solid transparent;
   @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-border-radius);
-  @include transition($transition-base);
+  @include transition($btn-transition);
 
   &,
   &:active,
