Update popovers and tooltips. (#83)
* Update popovers and tooltips.

--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -2610,7 +2610,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@abbr-border-color">@abbr-border-color</label>
-    <input id="input-@abbr-border-color" type="text" aria-describedby="help-block-@abbr-border-color" value="@gray-light" data-var="@abbr-border-color" class="form-control"/>
+    <input id="input-@abbr-border-color" type="text" aria-describedby="help-block-@abbr-border-color" value="@link-color" data-var="@abbr-border-color" class="form-control"/>
     <p id="help-block-@abbr-border-color" class="help-block">Abbreviations and acronyms border color</p>
   </div>
   <div class="clearfix"></div>
