--- a/docs/examples/partials/topup-form.html
+++ b/docs/examples/partials/topup-form.html
@@ -79,7 +79,13 @@
 			</li>
 			<li>
 				<div class="sequence-table-th">1.23456</div>
-				<div class="sequence-table-td">Guaranteed rate</div>
+				<div class="sequence-table-td">
+					<a href="" tw-pop-over
+						title="Popover title title title"
+						data-content="Something about the rate, and some other thing">
+						Guaranteed
+					</a> rate
+				</div>
 			</li>
 		</ul>
 		<div class="form-group form-group-lg" ng-if="$ctrl.action === 'convert'">
