--- a/less/type.less
+++ b/less/type.less
@@ -424,6 +424,7 @@ abbr[title],
 abbr[data-original-title] {
   cursor: help;
   border-bottom: 1px dotted @abbr-border-color;
+  text-decoration: none;
 }
 .initialism {
   font-size: 90%;
