--- a/less/variables.less
+++ b/less/variables.less
@@ -1129,7 +1129,7 @@
 //** Text muted color
 @text-muted:                  @gray-light;
 //** Abbreviations and acronyms border color
-@abbr-border-color:           @gray-light;
+@abbr-border-color:           @link-color;
 //** Headings small color
 @headings-small-color:        @gray-light;
 //** Blockquote small color
