--- a/docs/_includes/js/popovers.html
+++ b/docs/_includes/js/popovers.html
@@ -77,46 +77,79 @@ $(function () {
 
   <h3>Live demo</h3>
   <div class="bs-example bs-example-padded-bottom">
-    <button type="button" class="btn btn-lg btn-danger bs-docs-popover" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+    <a class="bs-docs-popover"
+      data-toggle="popover"
+      title="Popover title"
+      data-content="And here's some amazing content. It's very engaging. Right?"
+      data-trigger="focus"
+      role="button"
+      tabindex="0">
+      Click to toggle popover
+    </a>
   </div>
 {% highlight html %}
-<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+<a data-toggle="popover"
+  title="Popover title"
+  data-content="And here's some amazing content. It's very engaging. Right?"
+  data-trigger="focus"
+  role="button"
+  tabindex="0">
+  Click to toggle popover
+</a>
 {% endhighlight %}
 
   <h4>Four directions</h4>
   <div class="bs-example popover-demo">
     <div class="bs-example-popovers">
-      <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+      <a data-toggle="popover" data-placement="left"
+        data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+        role="button" tabindex="0" data-trigger="focus" >
         Popover on left
-      </button>
-      <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+      </a>
+      -
+      <a data-toggle="popover" data-placement="top"
+        data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+        role="button" tabindex="0" data-trigger="focus">
         Popover on top
-      </button>
-      <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+      </a>
+      -
+      <a data-toggle="popover" data-placement="bottom"
+        data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+        role="button" tabindex="0" data-trigger="focus">
         Popover on bottom
-      </button>
-      <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+      </a>
+      -
+      <a data-toggle="popover" data-placement="right"
+        data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+        role="button" tabindex="0" data-trigger="focus">
         Popover on right
-      </button>
+      </a>
     </div>
   </div><!-- /example -->
 {% highlight html %}
-<button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+<a data-toggle="popover" data-placement="left"
+  data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+  role="button" tabindex="0" data-trigger="focus">
   Popover on left
-</button>
+</a>
 
-<button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+<a data-toggle="popover" data-placement="top"
+  data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+  role="button" tabindex="0" data-trigger="focus">
   Popover on top
-</button>
+</a>
 
-<button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
-sagittis lacus vel augue laoreet rutrum faucibus.">
+<a data-toggle="popover" data-placement="bottom"
+  data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+  role="button" tabindex="0" data-trigger="focus">
   Popover on bottom
-</button>
+</a>
 
-<button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+<a data-toggle="popover" data-placement="right"
+  data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+  role="button" tabindex="0" data-trigger="focus">
   Popover on right
-</button>
+</a>
 {% endhighlight %}
 
   <h4>Dismiss on next click</h4>
@@ -126,10 +159,20 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
     <p>For proper cross-browser and cross-platform behavior, you must use the <code>&lt;a&gt;</code> tag, <i>not</i> the <code>&lt;button&gt;</code> tag, and you also must include the <code>role="button"</code> and <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes#tabindex"><code>tabindex</code></a> attributes.</p>
   </div>
   <div class="bs-example bs-example-padded-bottom">
-    <a tabindex="0" class="btn btn-lg btn-danger bs-docs-popover" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
+    <a tabindex="0" class="bs-docs-popover" role="button" data-toggle="popover"
+      data-trigger="focus" title="Dismissible popover"
+      data-content="And here's some amazing content. It's very engaging. Right?">
+      Dismissible popover
+    </a>
   </div>
 {% highlight html %}
-<a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
+<a tabindex="0" role="button"
+  data-toggle="popover"
+  data-trigger="focus"
+  title="Dismissible popover"
+  data-content="And here's some amazing content. It's very engaging. Right?">
+  Dismissible popover
+</a>
 {% endhighlight %}
 
 
