Update button-addon and inverse sequence table colours
* Change color on dropdown addon btn
* Update color of inverse sequence table

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -385,11 +385,11 @@ input[type="button"] {
   .button-variant(
       #FFF;
       #FFF;
-      @brand-navy;
       @brand-navy-minus-10;
       @brand-navy-minus-20;
-      @brand-navy;
+      @brand-navy-minus-20;
       @brand-navy-minus-10;
+      @brand-navy-minus-20;
       @brand-navy-minus-20;
       #FFF
   );
