--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -298,7 +298,8 @@ select.form-control-lg {
 .form-inline {
   display: flex;
   flex-flow: row wrap;
-
+  align-items: center; // Prevent shorter elements from growing to same height as others (e.g., small buttons growing to normal sized button height)
+  
   // Because we use flex, the initial sizing of checkboxes is collapsed and
   // doesn't occupy the full-width (which is what we want for xs grid tier),
   // so we force that here.
@@ -307,7 +308,7 @@ select.form-control-lg {
   }
 
   // Kick in the inline
-  @include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(sm) {    
     label {
       display: flex;
       align-items: center;
