--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -29,6 +29,7 @@
 
 .navbar-brand {
   display: inline-block;
+  align-self: flex-start;
   padding-top: .25rem;
   padding-bottom: .25rem;
   margin-right: $navbar-padding-x;
