Redefine grayscale variables
This commit fixes #21624 and solves the `#ddd` issue discussed in #20677.

--- a/docs/assets/scss/_component-examples.scss
+++ b/docs/assets/scss/_component-examples.scss
@@ -351,5 +351,5 @@
 }
 .highlight pre code {
   font-size: inherit;
-  color: $gray-dark; // Effectively the base text color
+  color: $gray-darkest; // Effectively the base text color
 }
