--- a/scss/utilities/_text.scss
+++ b/scss/utilities/_text.scss
@@ -52,7 +52,7 @@
 
 // Font color
 
-@include text-emphasis-variant('.text-gray-dark', $gray-dark);
+@include text-emphasis-variant('.text-gray-dark', $gray-darkest);
 
 // Misc
 
