--- a/docs/assets/scss/_nav.scss
+++ b/docs/assets/scss/_nav.scss
@@ -10,13 +10,13 @@
       &.active,
       &:hover,
       &:focus {
-        color: $gray-dark;
+        color: $gray-darkest;
         background-color: transparent;
       }
 
       &.active {
         font-weight: 500;
-        color: darken($gray-dark, 15%);
+        color: darken($gray-darkest, 15%);
       }
     }
   }
