--- a/docs/assets/scss/_sidebar.scss
+++ b/docs/assets/scss/_sidebar.scss
@@ -59,7 +59,7 @@
 .bd-toc-link {
   display: block;
   padding: .25rem .75rem;
-  color: $gray;
+  color: $gray-darker;
 }
 .bd-toc-link:hover,
 .bd-toc-link:focus {
@@ -68,7 +68,7 @@
 }
 .active > .bd-toc-link {
   font-weight: 500;
-  color: $gray-dark;
+  color: $gray-darkest;
 }
 .active > .bd-sidenav {
   display: block;
@@ -102,6 +102,6 @@
 .bd-sidebar .nav > .active:hover > a,
 .bd-sidebar .nav > .active:focus > a {
   font-weight: 500;
-  color: $gray-dark;
+  color: $gray-darkest;
   background-color: transparent;
 }
