Inherit font for button, input, select and textarea

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -311,8 +311,7 @@ input,
 button,
 select,
 textarea {
-  // Normalize includes `font: inherit;`, so `font-family`. `font-size`, etc are
-  // properly inherited. However, `line-height` isn't inherited there.
+  font: inherit;
   line-height: inherit;
 }
 
