--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -862,18 +862,26 @@ $alert-border-width:          $border-width !default;
 $alert-success-bg:            $state-success-bg !default;
 $alert-success-text:          $state-success-text !default;
 $alert-success-border:        $state-success-border !default;
+$alert-success-separator:     darken($alert-success-border, 5%) !default;
+$alert-success-link:          darken($state-success-text, 10%) !default;
 
 $alert-info-bg:               $state-info-bg !default;
 $alert-info-text:             $state-info-text !default;
 $alert-info-border:           $state-info-border !default;
+$alert-info-separator:        darken($alert-info-border, 5%) !default;
+$alert-info-link:             darken($state-info-text, 10%) !default;
 
 $alert-warning-bg:            $state-warning-bg !default;
 $alert-warning-text:          $state-warning-text !default;
 $alert-warning-border:        $state-warning-border !default;
+$alert-warning-separator:     darken($alert-warning-border, 5%) !default;
+$alert-warning-link:          darken($state-warning-text, 10%) !default;
 
 $alert-danger-bg:             $state-danger-bg !default;
 $alert-danger-text:           $state-danger-text !default;
 $alert-danger-border:         $state-danger-border !default;
+$alert-danger-separator:      darken($alert-danger-border, 5%) !default;
+$alert-danger-link:           darken($state-danger-text, 10%) !default;
 
 
 // Progress bars
