--- a/scss/mixins/_background-variant.scss
+++ b/scss/mixins/_background-variant.scss
@@ -1,12 +1,12 @@
 // Contextual backgrounds
 
-@mixin bg-variant($parent, $color) {
+@mixin bg-variant($parent, $color, $link-hover-color) {
   #{$parent} {
     background-color: $color !important;
   }
   a#{$parent} {
     @include hover-focus {
-      background-color: darken($color, 10%) !important;
+      background-color: $link-hover-color !important;
     }
   }
 }
